feat: Add internationalization support for various UI elements and update styles

--- a/i18n/locales/vi.json
+++ b/i18n/locales/vi.json
@@ -4,12 +4,17 @@
   "Settings": "Cài đặt",
   "About": "Giới thiệu",
 
+  "Power": "Năng lượng",
+  "Products": "Sản phẩm",
   "Buildings": "Công trình",
   "Items": "Sản phẩm",
 
-  "Affinities": "Khu vực",
+  "Affinities": "Tương thích",
   "Boosts": "Tăng cường",
   "Beacons": "Tăng tốc",
+
+  "None": "None",
+  "Other": "Khác",
 
   "Graph direction": "Hướng đồ thị",
   "Top to bottom": "Từ trên xuống dưới",
@@ -26,8 +31,41 @@
   "hour": "giờ",
   "Game mode": "Chế độ chơi",
 
+  "Search by name": "Tìm kiếm bằng tên",
+  "Item": "Vật phẩm",
+  "Fluid": "Chất lỏng",
+  "Unit": "Đơn vị",
+  "Close": "Đóng",
+
   "Copper": "Đồng",
   "Lead": "Chì",
   "Coal": "Than",
-  "Sand": "Cát"
+  "Sand": "Cát",
+  "Scrap": "Phế liệu",
+  "Titanium": "Titan",
+  "Thorium": "Thorium",
+  "Graphite": "Than chì",
+  "Silicon": "Silicon",
+  "PhaseFabric": "Sợi lượng tử",
+  "SurgeAlloy": "Hợp kim",
+  "BlastCompound": "Chất nổ",
+  "Metaglass": "Thủy tinh",
+  "Plastanium": "Nhựa",
+  "Pyratite": "Nhiệt hạch",
+  "SporePod": "Vỏ bào tử",
+  "Beryllium": "Beryllium",
+  "Tungsten": "Tungsten",
+  "Oxide": "Ô-xít",
+  "Carbide": "Hợp kim Carbide",
+  "Heat": "Nhiệt",
+  "Water": "Nước",
+  "Slag": "Xỉ nóng chảy",
+  "Oil": "Dầu",
+  "Cryofluid": "Chất làm lạnh",
+  "Neoplasm": "Dị thể",
+  "Arkycite": "Arkycite",
+  "Hydrogen": "Hy-dro lỏng",
+  "Ozone": "Ô-zôn",
+  "Nitrogen": "Ni-tơ lỏng",
+  "Cyanogen": "Cyanogen"
 }
